@@ -6,6 +6,7 @@ CHANGELOG Roundcube Webmail
 - Fix SQL error on logout when using session_storage=php (#1490421)
 - Update to jQuery 2.1.4 (#1490406)
 - Fix Compose action in addressbook for results from multiple addressbooks (#1490413)
+- Fix bug where some messages in multi-folder search couldn't be opened (#1490426)
 
 RELEASE 1.1.2
 -------------
